--- a/BookStoreClient/src/assets/i18n/en.json
+++ b/BookStoreClient/src/assets/i18n/en.json
@@ -11,5 +11,6 @@
     "search": "Type something to search...",
     "cart": "My Cart",
     "home": "Home",
-    "addchart": "Add to Bag"
+    "addchart": "Add to Bag",
+    "allproducts": "All Products"
 }
