--- a/BookStoreClient/src/assets/i18n/tr.json
+++ b/BookStoreClient/src/assets/i18n/tr.json
@@ -11,5 +11,6 @@
     "search": "Aranacak bir şey yazın...",
     "cart": "Sepetim",
     "home": "Anasayfa",
-    "addchart": "Sepete Ekle"
+    "addchart": "Sepete Ekle",
+    "allproducts": "Tüm Ürünler"
 }
