--- a/BookStoreClient/src/assets/i18n/tr.json
+++ b/BookStoreClient/src/assets/i18n/tr.json
@@ -53,5 +53,6 @@
     "cardnumber": "Kredi Kartı Numarası",
     "expiredate": "Son Kullanım Tarihi",
     "month": "Ay",
-    "year": "Yıl"
+    "year": "Yıl",
+    "successfulPayment": "Siparişiniz başarıyla oluşturuldu :)"
 }
