--- a/BookStoreClient/src/assets/i18n/tr.json
+++ b/BookStoreClient/src/assets/i18n/tr.json
@@ -89,5 +89,13 @@
     "ordersum": "Sipariş Özeti",
     "rateproduct": "Ürünü Değerlendir",
     "orderamount": "Toplam Sipariş Tutarı:",
-    "refundrequest": "İade Talebi"
+    "refundrequest": "İade Talebi",
+    "store": "Mağaza",
+    "contact": "İletişim",
+    "follow": "Sosyal Medya",
+    "newsletter": "Bülten",
+    "send": "Gönder",
+    "shop": "Keşfet",
+    "shopnow": "Ürünleri keşfetmeye başla.",
+    "newest": "En Yeniler"
 }
